--- a/parasubirHit/parasubirHit/parasubirHit.csproj
+++ b/parasubirHit/parasubirHit/parasubirHit.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClsPersonas.cs" />
     <Compile Include="ClsUsuarios.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
